DEMO OSM/OCP4-istio/servicemesh/app-recommendation/Customer/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: customer
  namespace: recommendation
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: customer
    weight: 100
  wildcardPolicy: None
